--- a/News-App_Pushpendra_lal/index.html
+++ b/News-App_Pushpendra_lal/index.html
@@ -7,16 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>MyNews</title>
+    <title>GET NEWS</title>
 </head>
 
 <body>
 
     <!-- Fixed navbar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand text-warning" href="#">MyNews</a>
+                <a class="navbar-brand text-light" href="#">GET NEWS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search news">
-                        <button class="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
+                        <button class="btn btn-outline-light" type="button" id="searchBtn">Search</button>
                     </form>
                 </div>
             </div>
@@ -52,8 +52,8 @@
     <!-- Content -->
     <main class="container mt-5 pt-5">
         <!-- Advanced Search Options -->
-        <div class="advanced-search mt-3 mb-4 p-3 rounded">
-            <h5>Advanced Search Options</h5>
+        <div class="advanced-search mt-3 mb-4 p-3 rounded border border-primary">
+            <h5 class="text-primary">Advanced Search Options</h5>
             <div class="row">
                 <div class="col-md-3">
                     <label for="fromDate" class="form-label">From Date:</label>
@@ -102,11 +102,11 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-4 mt-5">
+    <footer class="bg-primary text-white text-center py-4 mt-5">
         <div class="container">
-            <h5>My<span class="text-warning">News</span></h5>
-            <p class="mb-0">© 2024  All rights reserved.</p>
-            <p class="mb-0">Developed by Sampad Mandal</p>
+            <h5>GET <span class="text-light">NEWS</span></h5>
+            <p class="mb-0">Made with Love.</p>
+            <p class="mb-0">by Pushpendra Lal</p>
         </div>
     </footer>
 
